[tool.poetry]
name = "advent-of-code-2024"
version = "0.1.0"
description = ""
authors = ["Enrique Antonio Cores Rodríguez <encorod@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"
isort = "^5.13.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
